--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
+    "react-favicon": "^2.0.3",
     "react-modal": "^3.16.1",
     "socket.io-client": "^4.7.1",
     "tailwind-merge": "^1.13.2",
